syntax = "proto3";
package auth_v1;
option go_package = "https://github.com/illusory-server/auth-service/gen/authv1";

message Empty {}

message ErrorDetail {
  string message = 1;
  int32 code = 2;
}

message Bool {
  bool value = 1;
}

message Id {
  string id = 1;
}

message TokenResponse {
  string value = 1;
}

message RegistrationRequest {
  string login = 1;
  string password = 2;
  string email = 3;
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message JwtTokens {
  string accessToken = 1;
  string refreshToken = 2;
}

message ResponseUser {
  string id = 1;
  string login = 2;
  string email = 3;
  string role = 4;
  bool isBanned = 5;
  string banReason = 6;
}

message AuthResponse {
  ResponseUser user = 1;
  JwtTokens tokens = 2;
}

message Link {
  string link = 1;
}

message ChangePasswordRequest {
  string id = 1;
  string oldPassword = 2;
  string newPassword = 3;
}

message CheckAuthRequest {
  string accessToken = 1;
}

message JwtUser {
  string id = 1;
  string role = 4;
}

message RefreshToken {
  string refreshToken = 1;
}

message AccessToken {
  string accessToken = 1;
}

message UpdateUserEmail {
  string id = 1;
  string email = 2;
}

message UpdateUserRole {
  string id = 1;
  string role = 2;
}

message BanUser {
  string id = 1;
  string banReason = 2;
}

message CheckRoleRequest {
  string userId = 1;
  string role = 2;
}

message PaginationQuery {
  uint32 count = 1;
  uint32 currentPage = 2;
  string orderBy = 3;
  string orderDirection = 4;
}

message ManyResponseUser {
  repeated ResponseUser users = 1;
  uint32 pageCount = 2;
}

service AuthService {
  rpc registration(RegistrationRequest) returns (AuthResponse) {}
  rpc login(LoginRequest) returns (AuthResponse) {}
  rpc refresh(RefreshToken) returns (AuthResponse) {}
  rpc logout(RefreshToken) returns (Empty) {}
  rpc checkAuth(AccessToken) returns (JwtUser) {}
}

service UserService {
  rpc getUserById(Id) returns(ResponseUser) {}
  rpc getUsersByQuery(PaginationQuery) returns(ManyResponseUser) {}
  rpc updateUserRole(UpdateUserRole) returns(ResponseUser) {}
  rpc deleteUserById(Id) returns(Empty) {}
  rpc changePassword(ChangePasswordRequest) returns (Empty) {}
  rpc checkRole(CheckRoleRequest) returns (Bool) {}
  rpc confirmChangePassword(Link) returns (Empty) {}
}

service ActivateService {
  rpc linkActivate(Link) returns (Empty) {}
  rpc isUserActivate(Id) returns (Bool) {}
}

service BanService {
  rpc banUser(BanUser) returns(Empty) {}
  rpc unbanUser(Id) returns(Empty) {}
}